# basecamp

./: .gitignore  README.md  basecamp-arena-prompt.md  basecamp-multimodal-prompt.md  basecamp-ui-cohesion-prompt.md  launch-basecamp.command  package-lock.json  package.json  skills-lock.json
docs/: STYLE_GUIDE.md  v0.1-architecture.md  v0.2-feature-spec.md
public/: splash.html
src/: App.css  App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: inspect.rs  lib.rs  mcp.rs
src-tauri/src/commands/: team.rs
src-tauri/src/providers/: capabilities.rs  llama_cpp.rs  lmstudio.rs  mod.rs  ollama.rs  openrouter.rs  registry.rs
src-tauri/tests/fixtures/: camp_config_legacy_v0.json  transcript_legacy_shapes.jsonl
src/components/: AgentCard.tsx  CampSettingsPanel.tsx  CompareView.tsx  HistoryList.tsx  InspectPanel.tsx  ModelPicker.tsx  OutputPanel.tsx  RunDetail.tsx  RunForm.tsx  Settings.tsx  TeamArena.tsx  TeamConfig.tsx  TranscriptView.tsx  WebGLBackground.tsx
src/components/home/: CampCard.test.tsx  CampCard.tsx  ContextManager.tsx  ModelManager.tsx
src/components/ui/: Field.tsx  (+3 more)
src/hooks/: useArtifactComposerState.ts
src/lib/: campChatRuntime.test.ts  campChatRuntime.ts  campRequest.test.ts  campRequest.ts  db.ts  inspect.ts  models.ts  openrouter.toolLoop.test.ts  openrouter.ts  team.ts  toolRuntime.ts  tools.test.ts  tools.ts  transcriptRoundtrip.integration.test.ts  types.ts
src/views/: ArenaView.tsx  CampWorkspaceView.tsx  HomeView.css  HomeView.tsx  MainLayout.tsx  SettingsView.tsx
(+7 files in other folders)
