[package]
name = "app"
version = "0.1.0"
description = "Basecamp local-first LLM experimentation lab"
authors = ["Basecamp"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "2.3"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-dialog = "2.6.0"
uuid = { version = "1.11.1", features = ["v4"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "rt"] }
base64 = "0.22.1"
